Summary row binding

--- a/app/src/main/res/layout/summary_recycler_row.xml
+++ b/app/src/main/res/layout/summary_recycler_row.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="5dp">
 
     <androidx.cardview.widget.CardView
         style="@style/CardStyle"
@@ -18,12 +18,14 @@
                 android:id="@+id/summaryCardUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
                 android:text="" />
 
             <TextView
                 android:id="@+id/summaryCardUserValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:text="" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
