Debugging, input handling

--- a/app/src/main/res/layout/dialog_join_home.xml
+++ b/app/src/main/res/layout/dialog_join_home.xml
@@ -24,6 +24,7 @@
         android:id="@+id/joinHomeRecycler"
         style="@style/RecyclerStyleLarge"
         android:layout_height="300dp"
+        android:minHeight="200dp"
         tools:ignore="MissingConstraints"
         >
     </androidx.recyclerview.widget.RecyclerView>
