--- a/app/src/main/res/layout/home_recycler_row.xml
+++ b/app/src/main/res/layout/home_recycler_row.xml
@@ -5,12 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         style="@style/CardStyle"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/black"
         tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:padding="5dp"
             android:layout_height="match_parent">
 
             <TextView
@@ -29,7 +32,6 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/choreName"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:text="@string/chore_item_assignee_text"
                 />
 
@@ -46,9 +48,8 @@
                 android:id="@+id/choreDueText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/choreCardSpace"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/choreAssignedToText"
                 android:text="@string/chore_item_due_text"
                 />
 
@@ -56,18 +57,10 @@
                 android:id="@+id/choreDueDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="@id/choreDueText"
+                app:layout_constraintBottom_toBottomOf="@id/choreDueText"
                 app:layout_constraintStart_toEndOf="@id/choreDueText"
                 android:text="@string/chore_item_due"
-                />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/choreCardSpace"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.35"
                 />
 
             <Button
@@ -83,5 +76,5 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
