--- a/app/src/main/res/layout/join_home_recycler_row.xml
+++ b/app/src/main/res/layout/join_home_recycler_row.xml
@@ -9,12 +9,10 @@
 
     <androidx.cardview.widget.CardView
         style="@style/CardStyle"
-        android:minWidth="300dp"
         tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:minWidth="300dp"
             android:layout_height="match_parent">
 
             <TextView
@@ -50,6 +48,7 @@
                 android:minWidth="50dp"
                 android:minHeight="50dp"
                 app:layout_constraintEnd_toStartOf="@id/joinHomeDeclineInvite"
+                app:layout_constraintStart_toEndOf="@id/joinHomeSentByName"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:contentDescription="@string/join_home_accept_invite_desc"
