--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:elevation">10dp</item>
         <item name="cardCornerRadius">10dp</item>
+        <item name="android:padding">5dp</item>
         <item name="layout_constraintBottom_toBottomOf">parent</item>
         <item name="layout_constraintEnd_toEndOf">parent</item>
         <item name="layout_constraintHorizontal_bias">0.5</item>
