Home removal + debugging

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -7,6 +7,25 @@
     tools:context=".MenuFragment">
 
     <TextView
+        android:id="@+id/menuLoadingText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="200dp"
+        android:text="@string/home_loading"
+        style="@style/Title"
+        />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/menuContentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    <TextView
         style="@style/Title"
         android:id="@+id/menuTitleText"
         android:layout_width="wrap_content"
@@ -79,4 +98,5 @@
 
     </LinearLayout>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
