--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -108,6 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_chore_button"
+        style="?android:attr/buttonStyle"
         app:layout_constraintTop_toBottomOf="@id/allChoresRecycler"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -150,7 +151,8 @@
             android:layout_weight="1"
             android:text="@string/home_summary_button"
             android:drawableTop="@mipmap/summary_icon"
-            style="?android:attr/buttonBarButtonStyle" />
+            style="?android:attr/buttonBarButtonStyle"
+            />
     </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
