--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,4 +35,15 @@
         <item name="layout_constraintTop_toTopOf">parent</item>
     </style>
 
+    <style name="ChoreyButtonStyle">
+        <item name="backgroundTint">@color/purple_200</item>
+        <item name="android:color">@color/purple_200</item>
+        <item name="colorAccent">@color/purple_200</item>
+        <item name="android:colorAccent">@color/purple_200</item>
+    </style>
+
+    <style name="ChoreyBarButtonStyle">
+        <item name="android:background">@color/secondaryColor</item>
+        <item name="cornerRadius">10dp</item>
+    </style>
 </resources>
