--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,13 +4,20 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/primaryTextColor</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/secondaryColor</item>
         <item name="colorSecondaryVariant">@color/secondaryDarkColor</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorOnSecondary">@color/secondaryTextColor</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="materialButtonStyle">@style/ChoreyButtonStyle</item>
+<!--        <item name="buttonBarButtonStyle">@style/ChoreyBarButtonStyle</item>-->
+        <item name="buttonStyle">@style/ChoreyButtonStyle</item>
+        <item name="buttonBarStyle">@style/ChoreyButtonStyle</item>
+        <item name="buttonBarButtonStyle">@style/ChoreyButtonStyle</item>
+
+
     </style>
 </resources>
