--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,23 +18,23 @@
 <!--    <color name="primaryTextColor">#ffffff</color>-->
 <!--    <color name="secondaryTextColor">#ffffff</color>-->
 
-<!--    Light mode colors -->
-<!--    <color name="primaryColor">#c7e5c8</color>-->
-<!--    <color name="primaryLightColor">#fafffb</color>-->
-<!--    <color name="primaryDarkColor">#96b397</color>-->
-<!--    <color name="secondaryColor">#ffc107</color>-->
-<!--    <color name="secondaryLightColor">#fff350</color>-->
-<!--    <color name="secondaryDarkColor">#c79100</color>-->
-<!--    <color name="primaryTextColor">#000000</color>-->
-<!--    <color name="secondaryTextColor">#000000</color>-->
-
-<!--    Dark mode V1-->
-    <color name="primaryColor">#009688</color>
-    <color name="primaryLightColor">#52c7b8</color>
-    <color name="primaryDarkColor">#00675b</color>
-    <color name="secondaryColor">#ffa000</color>
-    <color name="secondaryLightColor">#ffd149</color>
-    <color name="secondaryDarkColor">#c67100</color>
+<!--    Light mode -->
+    <color name="primaryColor">#c7e5c8</color>
+    <color name="primaryLightColor">#fafffb</color>
+    <color name="primaryDarkColor">#96b397</color>
+    <color name="secondaryColor">#ffc107</color>
+    <color name="secondaryLightColor">#fff350</color>
+    <color name="secondaryDarkColor">#c79100</color>
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#000000</color>
+
+<!--    Dark mode -->
+    <color name="primaryColorDark">#009688</color>
+    <color name="primaryLightColorDark">#52c7b8</color>
+    <color name="primaryDarkColorDark">#00675b</color>
+    <color name="secondaryColorDark">#ffa000</color>
+    <color name="secondaryLightColorDark">#ffd149</color>
+    <color name="secondaryDarkColorDark">#c67100</color>
+    <color name="primaryTextColorDark">#000000</color>
+    <color name="secondaryTextColorDark">#000000</color>
 </resources>
