--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -53,6 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/auth_button_logout"
+        style="?attr/buttonStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +61,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/all_rooms_recycler"
-        style="@style/RecyclerStyleLarge"
+        style="?attr/recyclerViewStyle"
         tools:ignore="MissingConstraints"
         />
 
@@ -80,7 +81,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="@string/add_home_button"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            style="?attr/buttonStyle"
             />
 
         <Button
@@ -90,7 +91,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/remove_home_button"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            style="?attr/buttonStyle"
             />
 
     </LinearLayout>
