--- a/app/src/main/res/layout/summary_recycler_row.xml
+++ b/app/src/main/res/layout/summary_recycler_row.xml
@@ -7,7 +7,7 @@
     android:layout_margin="5dp">
 
     <androidx.cardview.widget.CardView
-        style="@style/CardStyle"
+        style="?attr/cardViewStyle"
 
         tools:ignore="MissingConstraints">
 
