--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,17 +2,19 @@
     <!-- Base application theme. -->
     <style name="Theme.Chorey" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/primaryLightColor</item>
-        <item name="colorPrimaryVariant">@color/primaryColor</item>
-        <item name="colorOnPrimary">@color/primaryTextColor</item>
+        <item name="colorPrimary">@color/primaryLightColorDark</item>
+        <item name="colorPrimaryVariant">@color/primaryColorDark</item>
+        <item name="colorOnPrimary">@color/primaryTextColorDark</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/secondaryLightColor</item>
-        <item name="colorSecondaryVariant">@color/secondaryColor</item>
-        <item name="colorOnSecondary">@color/secondaryTextColor</item>
+        <item name="colorSecondary">@color/secondaryLightColorDark</item>
+        <item name="colorSecondaryVariant">@color/secondaryColorDark</item>
+        <item name="colorOnSecondary">@color/secondaryTextColorDark</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="buttonBarButtonStyle">@style/ChoreyBarButtonStyle</item>
-        <item name="buttonStyle">@style/ChoreyButtonStyle</item>
+        <item name="cardViewStyle">@style/CardStyle.Dark</item>
+        <item name="buttonStyle">@style/ChoreyButton.Dark</item>
+        <item name="buttonBarButtonStyle">@style/ChoreyBarButton.Dark</item>
+        <item name="recyclerViewStyle">@style/RecyclerStyleLarge</item>
     </style>
 </resources>
